--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
     "require": {
         "php": ">=5.4.0",
         "illuminate/support": "5.x",
-        "mpdf/mpdf": "dev-master"
+        "mpdf/mpdf": "~6.0"
     },
     "autoload": {
         "psr-0": {
